# advent-of-code-2023

./: README.md
ceria/: README.md
ceria/07/: input
ceria/08/: build.gradle.kts
cicavey/: .gitignore  Cargo.toml
cicavey/01/: Cargo.toml  Makefile
cicavey/01/src/: lib.rs  main.rs  work.rs
cicavey/01/www/: index.html  index.js  input.txt  package-lock.json  package.json  webpack.config.js
cicavey/day01/: Cargo.toml  index.html
cicavey/day01/src/: part1.rs  part2.rs
cicavey/day02/: Cargo.toml
cicavey/day02/src/: part1.rs  part2.rs
cicavey/day03/: Cargo.toml
cicavey/day03/src/: part1.rs  part2.rs
cicavey/day04/: Cargo.toml
cicavey/day04/src/: part1.rs  part2.rs
cicavey/day05/: Cargo.toml
cicavey/day05/src/: part1.rs  part2.rs
cicavey/day06/: Cargo.toml
cicavey/day06/src/: part1.rs  part2.rs
cicavey/day07/: Cargo.toml
cicavey/day07/src/: part1.rs  part2.rs
cicavey/day08/: Cargo.toml
cicavey/day08/src/: part1.rs  part2.rs
cicavey/day09/: Cargo.toml
cicavey/day10/: Cargo.toml
cicavey/day11/: Cargo.toml
cicavey/day12/: Cargo.toml
cicavey/day13/: Cargo.toml  input.txt
cicavey/day14/: Cargo.toml
cicavey/day15/: Cargo.toml
cicavey/day16/: Cargo.toml
cicavey/day18/: Cargo.toml
cicavey/day19/: Cargo.toml
daphillips/: settings.gradle.kts
jfleone/01/: 01.go
jfleone/02/: 02.go
jfleone/03/: 03.go
jfleone/04/: part1.go
jfleone/08/: part1.go
jfleone/09/: part1.go  part1part2.go
jfleone/10/: part1.go
jfleone/11/: part1part2.go
shaw/01/: main.py
shaw/07/: main.py
shaw/08/: main.py
shaw/09/: main.py
(+32 files in other folders)
