[package]
name = "aoc"
version = "0.1.0"
authors = ["Chris Cavey <cicavey@visionistinc.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ['console', 'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',] }
wee_alloc = { version = "0.4.5", optional = true }